# qsentia-model-c-sentiment-alpha

./: .gitignore  README.md  models_yaml_addition.txt  pyproject.toml
.github/workflows/: alpaca-paper-rebalance.yml
artifacts/: mlp.joblib
logs/decisions/: decisions.csv  latest_decision.csv
logs/health/: health_status.json  latest_sentiment_rows.csv
logs/orders/: latest_orders.csv  latest_planned_orders.csv
logs/portfolio/: portfolio.csv
logs/positions/: latest_positions.csv
logs/target_weights/: latest_target_weights.csv
scripts/: run_paper_trader.py
src/qsentia_model_c_sentiment_alpha/: __init__.py  alpaca_client.py  config.py  logging_utils.py  model_c.py  sentiment.py  trader.py
tests/: test_structural.py
