[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsentia-model-c-sentiment-alpha"
version = "0.1.0"
description = "QSentia Model C equity alpha with a live news sentiment overlay and Alpaca paper trading."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alpaca-py>=0.30.0",
    "feedparser>=6.0.11",
    "joblib>=1.3",
    "numpy>=1.24,<2.3",
    "pandas>=2.0,<2.3",
    "pyarrow>=14.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "scikit-learn==1.6.1",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
nlp = [
    "torch>=2.4,<2.6",
    "transformers>=4.43,<5",
]
test = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
